<resources>
    <!--<string name="app_name">Camera Roll</string>-->
    <string name="about_text" translatable="false">
        <![CDATA[
            © 2017 Lukas Koller, Munich, Germany<br/>
            <br/>
            <a href=\"https://github.com/kollerlukas/Camera-Roll-Android-App\">Source Code</a> for this App<br/>
            <br/>
            <br/>
            <b>Licenses:</b><br/>
            <br/>
            Libraries:<br/>
            <br>
                <a href=\"https://github.com/bumptech/glide\">Glide</a><br/>
                An image loading and caching library for Android focused on smooth scrolling.<br/>
                <a href=\"https://github.com/bumptech/glide/blob/master/LICENSE\">LICENSE</a>
            <br>
            <br/>
            <br>
                <a href=\"https://github.com/davemorrissey/subsampling-scale-image-view\">Subsampling Scale Image View</a><br/>
                Highly configurable, easily extendable view with pan and zoom gestures for displaying huge images without loss of detail. Perfect for photo galleries, maps, building plans etc.<br/>
                <a href=\"https://github.com/davemorrissey/subsampling-scale-image-view/blob/master/LICENSE\">LICENSE</a>
            <br>
            <br/>
            <br>
                <b><a href=\"https://github.com/chrisbanes/PhotoView\">PhotoView</a></b><br/>
                Implementation of ImageView for Android that supports zooming, by various touch gestures.<br/>
                <a href=\"https://github.com/chrisbanes/PhotoView/blob/master/LICENSE\">LICENSE</a>
            <br>
            <br/>
            <br>
                <b><a href=\"https://github.com/MFlisar/DragSelectRecyclerView\">DragSelectRecyclerView</a></b><br/>
                TouchListener that can be attached to any RecyclerView and handles multi selection for you.<br/>
                <a href=\"https://github.com/MFlisar/DragSelectRecyclerView/blob/master/LICENSE\">LICENSE</a>
            <br>
            <br/>
            <br>
                <b><a href=\"https://github.com/google/ExoPlayer\">ExoPlayer</a></b><br/>
                An extensible media player for Android.<br/>
                <a href=\"https://github.com/google/ExoPlayer/blob/release-v2/LICENSE\">LICENSE</a>
            <br>
            <br/>
            <br>
                <b><a href=\"https://github.com/DavidPacioianu/InkPageIndicator\">InkPageIndicator</a></b><br/>
                InkPageIndicator created by @nickbutcher for Plaid https://github.com/nickbutcher/plaid and backported by me for API 14+ (4.0+)<br/>
                <a href=\"https://github.com/DavidPacioianu/InkPageIndicator/blob/master/LICENSE\">LICENSE</a>
            <br>
            <br/>
            <br>
                <b><a href=\"https://github.com/chrisjenx/Calligraphy\">Calligraphy</a></b><br/>
                Custom fonts in Android the easy way...<br/>
                <a href=\"https://github.com/chrisjenx/Calligraphy/blob/master/LICENSE\">LICENSE</a>
            <br>
            <br/>
            <br/>
            Icons:<br/>
            <br>
                <b><a href=\"https://material.io/icons/\">Material Design Icons</a></b>, by Google<br/>
            <br>
            <br/>
            Fonts:<br/>
            <br>
                <b><a href=\"https://fonts.google.com/specimen/Roboto+Mono?selection.family=Roboto+Mono\">Roboto Mono Font</a></b>, by Christian Robertson
            <br>
        ]]>
    </string>
    <string name="toolbar_transition_name" translatable="false">toolbar_transition_name</string>

    <!--Preference Keys-->
    <string name="pref_key_theme" translatable="false">KEY_THEME</string>
    <string name="pref_key_media_retriever" translatable="false">KEY_MEDIA_RETRIEVER</string>
    <string name="pref_key_style" translatable="false">KEY_STYLE</string>
    <string name="pref_key_style_column_count" translatable="false">KEY_STYLE_COLUMN_COUNT</string>
    <string name="pref_key_column_count" translatable="false">KEY_COLUMN_COUNT</string>
    <string name="pref_key_sort_albums" translatable="false">KEY_SORT_ALBUMS</string>
    <string name="pref_key_sort_album" translatable="false">KEY_SORT_ALBUM</string>
    <string name="pref_key_8_bit_color" translatable="false">KEY_8_BIT_COLOR</string>
    <string name="pref_key_camera_shortcut" translatable="false">KEY_CAMERA_SHORTCUT</string>

    <!--translatable-->
    <string name="read_permission_denied">Camera Roll needs the permission access your Storage to
        depict your pictures.
    </string>
    <string name="write_permission_denied">Camera Roll need the permission to write to your Storage
        in order to delete this photo.
    </string>
    <string name="missing_permission_title">Missing Permission</string>
    <string name="missing_delete_permission">Camera Roll does not have Permission to delete this
        file.
    </string>

    <string name="refresh">Refresh</string>
    <string name="sort_by">Sort by…</string>
    <string name="hidden_folders">Hidden Folders</string>
    <string name="file_explorer">File Explorer</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>

    <string name="set_as">Set as…</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="share_photo">Share Photo</string>
    <string name="edit">Edit</string>
    <string name="print">Print</string>

    <string name="delete">Delete</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="photos_deleted">Photos deleted</string>
    <string name="successfully_deleted">"successfully deleted "</string>

    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="create">Create</string>
    <string name="new_folder">New Folder</string>
    <string name="rename">Rename</string>
    <string name="paste">Paste</string>
    <string name="to">" to"</string>
    <string name="successfully_moved">"successfully moved "</string>
    <string name="successfully_copied">"successfully copied "</string>
    <string name="successfully_created_new_folder">Successfully created new Folder</string>
    <string name="successfully_renamed_file">Successfully renamed file</string>

    <string name="pick_photo">Pick Photo</string>
    <string name="pick_photos">Pick Photos</string>

    <string name="item">" Item"</string>
    <string name="items">" Items"</string>
    <string name="files">Files</string>
    <string name="file">File</string>

    <string name="loading">Loading…</string>
    <string name="loading_failed">Loading failed</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>

    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="retry">Retry</string>

    <string name="error">Error</string>

    <string name="photo">Photo</string>

    <string name="no_files">NO FILES</string>
    <string name="storage">Storage</string>

    <string name="exclude">Exclude</string>
    <string name="excluded">Excluded</string>

    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="style">Style</string>
    <string name="column_count">Column Count</string>
    <string name="other">Other</string>

    <string name="media_retriever">MediaRetriever</string>
    <string name="media_retriever_summary">Manually search the storage for media instead of relying on the MediaStore Api.
        This might help if you are missing some picture.</string>

    <string name="use_8_bit_color">8-Bit Color</string>
    <string name="use_8_bit_color_summary">Use 8-Bit Color, when displaying images.
        Images might take longer to load. This also increases the amount of memory is used, when the app is running.</string>

    <string name="camera_shortcut">Camera Shortcut</string>

    <string name="warning">Warning!</string>
    <string name="file_explorer_warning_message">The File Explorer is an
        <b>experimental</b>
        feature.
        <br />
        The developer does not take any responsibility for the loss of any data or files.
        <br />
        <b>Use at Your own risk.</b>
    </string>

    <string name="edit_space">"Edit "</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="exif_editor">Exif Editor</string>
    <string name="edit_exif">edit Exif</string>
    <string name="save">Save</string>
    <string name="changes_saved">Changes saved</string>

    <!--ImageView ContentDescription-->
    <string name="image">Image</string>
    <string name="indicator">Indicator</string>

    <string name="video_indicator">Video Indicator</string>
    <string name="hidden_folder_indicator">Hidden Folder Indicator</string>

    <string name="play_pause"><![CDATA[Play & Pause Button]]></string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="by_name">Name</string>
    <string name="by_size">Size</string>
    <string name="by_date">Date</string><!--Last Modified-->
    <string name="folder_name">Folder Name</string>
    <string name="pin_album">Pin Album</string>
    <string name="grant_removable_storage_permission">Grant removable Storage Permission</string>
    <string name="grant_removable_storage_permission_message">Please select the root folder of your
        removable Storage device (e.g. SD Card) on the next screen.
    </string>
    <string name="open_with">Open with...</string>
</resources>
