<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/appearance">

        <ListPreference
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            android:key="@string/pref_key_theme"
            android:title="@string/theme"
            android:defaultValue="@string/DARK_THEME_VALUE" />

        <us.koller.cameraroll.preferences.StylePreference
            style="@style/Theme.CameraRoll.DialogPreference"
            android:key="@string/pref_key_style"
            android:title="@string/style"
            android:defaultValue="@integer/STYLE_PARALLAX_VALUE" />

        <us.koller.cameraroll.preferences.ColumnCountPreference
            style="@style/Theme.CameraRoll.DialogPreference"
            android:key="@string/pref_key_column_count"
            android:title="@string/column_count"
            android:defaultValue="4" />

        <SwitchPreference
            android:key="@string/pref_key_camera_shortcut"
            android:title="@string/camera_shortcut"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">

        <SwitchPreference
            android:key="@string/pref_key_media_retriever"
            android:summary="@string/media_retriever_summary"
            android:title="@string/media_retriever"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="@string/pref_key_8_bit_color"
            android:summary="@string/use_8_bit_color_summary"
            android:title="@string/use_8_bit_color"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>