<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/set_as"
          android:title="@string/set_as"
          android:icon="@drawable/ic_style_white_24dp"
          app:showAsAction="never"/>

    <item android:id="@+id/info"
          android:title="@string/info"
          android:icon="@drawable/ic_info_white_24dp"
          app:showAsAction="never"/>

    <item android:id="@+id/share"
          android:title="@string/share"
          android:icon="@drawable/ic_share_white_24dp"
          app:showAsAction="never"/>

    <item android:id="@+id/edit"
          android:title="@string/edit"
          android:icon="@drawable/ic_mode_edit_white_24dp"
          app:showAsAction="never"/>

    <item android:id="@+id/delete"
          android:title="@string/delete"
          android:icon="@drawable/ic_delete_white_24dp"
          app:showAsAction="never"/>
</menu>