<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/exclude"
        android:checkable="true"
        android:icon="@drawable/ic_visibility_off_white"
        android:title="@string/exclude"
        app:showAsAction="never" />

    <item
        android:id="@+id/scan"
        android:title="@string/scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_to_virtual_album"
        android:title="@string/add_path_to_virtual_album"
        app:showAsAction="never" />

    <item
        android:id="@+id/paste"
        android:icon="@drawable/ic_content_paste"
        android:title="@string/paste"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_content_copy_white"
        android:title="@string/copy" />

    <item
        android:id="@+id/move"
        android:icon="@drawable/ic_folder_move_white"
        android:title="@string/move" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white"
        android:title="@string/delete" />
</menu>