<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <!--<item android:id="@+id/sort_by"
          android:icon="@drawable/ic_sort_white_24dp"
          android:title="@string/sort_by"
          app:showAsAction="never"/>-->

    <item
        android:id="@+id/hiddenFolders"
        android:checkable="true"
        android:icon="@drawable/ic_eye_off_white_24dp"
        android:title="@string/hidden_folders"
        app:showAsAction="never" />

    <item
        android:id="@+id/file_explorer"
        android:icon="@drawable/ic_folder_white_24dp"
        android:title="@string/file_explorer"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>