<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/copy"
        android:title="@string/copy"
        android:icon="@drawable/ic_content_copy_white"
        app:showAsAction="never" />

    <item
        android:id="@+id/move"
        android:title="@string/move"
        android:icon="@drawable/ic_folder_move_white"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>