<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

    <LinearLayout
            android:id="@+id/bottom_bar"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:background="@drawable/transparent_to_dark_gradient">

        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/info_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_info_white_24dp"
                    android:padding="8dp"
                    android:onClick="bottomBarOnClick"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/info"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/share_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_share_white_24dp"
                    android:padding="8dp"
                    android:onClick="bottomBarOnClick"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/share"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/edit_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_mode_edit_white_24dp"
                    android:padding="8dp"
                    android:onClick="bottomBarOnClick"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/edit"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/delete_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_delete_white_24dp"
                    android:padding="8dp"
                    android:onClick="bottomBarOnClick"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/delete"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>